Revision history for Pandoc-Elements

{{$NEXT}}

0.33  2017-02-13 10:57:59 CET
    - Extend and document document metadata handling (#10)
    - Fix $document->to_pandoc and friends with first Pandoc argument

0.32  2017-02-01 16:15:21 CET
    - Deprecate Pandoc::Filter::Usage and remove circular dependency

0.31  2017-02-01 15:52:47 CET
    - Remove deprecated script pandocwalk
    - Remove module Pandoc::Filter::Lazy

0.30  2017-01-31 21:23:11 CET
    - Fix and extend method to_pandoc
    - Extend document method metavalues

0.29  2017-01-25 12:10:07 CET
    - Add document methods: to_pandoc, to_markdown, ... (#48)
    - Add document methods: outline
    - Make Link/Image methods url/title also setters (#54)
    - Let pod2pandoc include package name as title
    - Fix metavalue for MetaBlocks

0.28  2016-11-29 06:49:57 CET
    - Fix pod2pandoc
    - Extend selection of serialization format (pandoc_version/api_version)

0.27  2016-11-21 19:36:29 CET
    - Update internal Document structure and default to Pandoc 1.18
    - Extend testing

0.26  2016-11-11 10:49:22 CET
    - Extend Pod::Simple::Pandoc
    - Add Pandoc::Filter::HeaderIdentifiers
    - Mark pandocwalk and Pandoc::Filter::Lazy as deprecated

0.25  2016-10-11 21:32:00 CEST
    - Improve pod2pandoc script
    - Rename Pandoc::Filter::Usage::frompod to ::pod2usage
    - Add example filter: section
    - use new CPAN module Pandoc

0.24  2016-10-06 14:17:31 CEST
    - Rewrite and rename pandoc-filters to multifilter

0.23  2016-09-30 22:35:22 CEST
    - Add Pandoc::Filter::Usage and option --about for filter documentation
    - Extend pandoc-filters to support future Pandoc filters directory
    - Make most getters also setters

0.22  2016-09-22 12:03:38 CEST
    - Add pandoc-filters script to run filters specified in document metadata 
    - Let pandoc_walk/pandoc_filter not filter metadata fields
    - Add metavars example 

0.21  2016-09-19 22:05:43 CEST
    - extend method 'keyvals' as setter