@@ -35,16 +35,16 @@ use JSON::PP;
 
 sub _value_args {
     my $content = shift->{c};
-    my ($path, %opts) = @_ % 2 ? @_ : (undef, @_);
+    my ($pointer, %opts) = @_ % 2 ? @_ : (undef, @_);
 
-    $opts{path} = $path // $opts{path} // '';
+    $opts{pointer} = $pointer // $opts{pointer} // '';
 
     return ($content, %opts);
 }
 
 sub Pandoc::Document::MetaString::value {
     my ($content, %opts) = _value_args(@_);
-    $opts{path} eq '' ? $content : undef;
+    $opts{pointer} eq '' ? $content : undef;
 }
 
 sub Pandoc::Document::MetaBool::set_content {
@@ -60,7 +60,7 @@ sub Pandoc::Document::MetaBool::TO_JSON {
 
 sub Pandoc::Document::MetaBool::value {
     my ($content, %opts) = _value_args(@_);
-    return if $opts{path} ne '';
+    return if $opts{pointer} ne '';
 
     if (($opts{boolean} // '') eq 'JSON::PP') {
         $content ? JSON::true() : JSON::false();
@@ -72,27 +72,34 @@ sub Pandoc::Document::MetaBool::value {
 sub Pandoc::Document::MetaMap::value {
     my ($map, %opts) = _value_args(@_);
 
-    if ($opts{path} eq '') {
+    if ($opts{pointer} eq '') {
         return { map { $_ => $map->{$_}->value(%opts) } keys %$map };
     } else {
-        my ($key, @fields) = split /\./, $opts{path};
-        $opts{path} = join '.', @fields;
+        my ($key, @fields) = split '/', $opts{pointer};
+        $key =~ s!~1!/!g;
+        $key =~ s/~0/~/g;
+        $opts{pointer} = join '/', @fields;
         return $map->{$key} ? $map->{$key}->value(%opts) : undef;
     }
 }
 
 sub Pandoc::Document::MetaList::value {
     my ($content, %opts) = _value_args(@_);
-    return if $opts{path} ne '';
-
-    [ map { $_->value } @$content ];
+    if ($opts{pointer} =~ /^[1-9]*[0-9]$/) {
+        my $value = $content->[$opts{pointer}];
+        defined $value ? $value->value(%opts, pointer => '') : undef;
+    } elsif ($opts{pointer} eq '') {
+        [ map { $_->value(%opts) } @$content ]
+    } else {
+        undef
+    }
 }
 
 sub Pandoc::Document::MetaInlines::value {
     my ($content, %opts) = _value_args(@_);
-    return if $opts{path} ne '';
+    return if $opts{pointer} ne '';
 
-    if ($opts{elements} // '' eq 'keep') {
+    if ($opts{element} // '' eq 'keep') {
         $content;
     } else {
         join '', map { $_->string } @$content;
@@ -105,9 +112,9 @@ sub Pandoc::Document::MetaBlocks::string {
 
 sub Pandoc::Document::MetaBlocks::value {
     my ($content, %opts) = _value_args(@_);
-    return if $opts{path} ne '';
+    return if $opts{pointer} ne '';
 
-    if ($opts{elements} // '' eq 'keep') {
+    if ($opts{element} // '' eq 'keep') {
         $content;
     } else {
         $_[0]->string;
@@ -157,20 +164,25 @@ All Metadata Elements support L<common element methods|Pandoc::Elements/COMMON
 METHODS> (C<name>, C<to_json>, C<string>, ...) and return true for method
 C<is_meta>.
 
-=head2 value( [ $field ] [ %options ] )
+=head2 value( [ $pointer ] [ %options ] )
 
 Called without an argument this method returns an unblessed deep copy of the
-metadata element. A (sub)field can optionally be selected on document level and
-MetaMap elements. Dot separate subfields:
+metadata element. JSON Pointer (L<RFC 6901|http://tools.ietf.org/html/rfc6901>)
+expressions can be used to select subfields.  Note that JSON Pointer escapes
+slash as C<~1> and character C<~> as C<~0>. Neither URI Fragment syntax nor
+empty strings as field names are supported.
 
-  $doc->value;                # full metadata
-  $doc->value('author');      # author field
-  $doc->value('author.name'); # name subfield of author field
+  $doc->value;                  # full metadata
+  $doc->value('author');        # author field
+  $doc->value('author/name');   # name subfield of author field
+  $doc->value('author/0');      # first author field
+  $doc->value('author/0/name'); # name subfield of first author field
+  $doc->value('~1~0');          # metadata field '/~'
 
 Returns C<undef> if the selected field does not exist.
 
 Instances of MetaInlines and MetaBlocks are stringified by unless option
-C<elements> is set to C<keep>.
+C<element> is set to C<keep>.
 
 Setting option C<boolean> to C<JSON::PP> will return C<JSON::PP:true>
 or C<JSON::PP::false> for L<MetaBool|/MetaBool> instances.
