@@ -1,6 +1,9 @@
 Revision history for Pandoc-Elements
 
 {{$NEXT}}
+    - Extend metadata value method with JSON Pointer and options (#73)
+    - Change default stringification of MetaBlocks
+    - More fixes provided by Benct Philip Jonsson (thanks!)
 
 0.33  2017-02-13 10:57:59 CET
     - Extend and document document metadata handling (#10)
